--- a/.editorconfig
+++ b/.editorconfig
@@ -1,12 +1,15 @@
 root = true
 
+[*.md]
+trim_trailing_whitespace = false
+
+[*.js]
+trim_trailing_whitespace = true
+
 [*]
 indent_style = space
 indent_size = 2
 end_of_line = lf
 charset = utf-8
-trim_trailing_whitespace = true
 insert_final_newline = true
-
-[*.md]
-trim_trailing_whitespace = false
+max_line_length = 80
