fixed env, register account

--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "dev:linux": "vite --mode linux",
     "dev:windows": "vite --mode windows",
     "dev:web": "vite --mode web",
-    "build": "tsc && vite build --mode production.mac && electron-builder",
-    "build:linux": "tsc && vite build --mode production.linux && electron-builder -l",
-    "build:windows": "tsc && vite build --mode production.windows && electron-builder -w",
-    "build:mac": "tsc && vite build --mode production.mac && electron-builder -m",
-    "build:web": "PROD=true DEV=false tsc && vite build --mode production.web && electron-builder",
+    "build": "tsc && vite build --mode mac && electron-builder",
+    "build:linux": "tsc && vite build --mode linux && electron-builder -l",
+    "build:windows": "tsc && vite build --mode windows && electron-builder -w",
+    "build:mac": "tsc && vite build --mode mac && electron-builder -m",
+    "build:web": "PROD=true DEV=false tsc && vite build --mode web && electron-builder",
     "lint": "eslint src/**/*.{js,jsx,ts,tsx,json}",
     "lint:fix": "eslint --fix 'src/**/*.{js,jsx,ts,tsx,json}'",
     "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc.js"
