--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "main": "dist-electron/electron/main/index.js",
   "scripts": {
-    "dev": "vite --mode mac",
+    "dev": "vite",
     "dev:mac": "vite --mode mac",
     "dev:linux": "vite --mode linux",
     "dev:windows": "vite --mode windows",
@@ -28,6 +28,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
     "classnames": "^2.3.2",
+    "electron-store": "^8.1.0",
     "i18next": "^22.4.5",
     "react-i18next": "^12.1.1",
     "react-ionicons": "^4.2.0",
@@ -36,6 +37,7 @@
     "react-select": "^5.7.0",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
+    "redux-persist-electron-storage": "^2.1.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
@@ -47,7 +49,7 @@
     "@typescript-eslint/eslint-plugin": "^5.45.1",
     "@typescript-eslint/parser": "^5.45.1",
     "@vitejs/plugin-react": "^2.2.0",
-    "electron": "^21.3.1",
+    "electron": "^22.0.0",
     "electron-builder": "^23.6.0",
     "eslint": "^8.29.0",
     "eslint-config-prettier": "^8.5.0",
